# pyo3-pyclass-share-dylib

./: .gitignore  Cargo.toml  README.md
lib1/: .bumpversion.cfg  Cargo.toml  Makefile  pyproject.toml
lib1-py/: Cargo.toml  pyproject.toml
lib1-py/lib1/: __init__.py
lib1-py/src/: lib.rs
lib1-rs/: Cargo.toml
lib1-rs/src/: lib.rs
lib1/.cargo/: config.toml
lib1/lib1/: __init__.py
lib1/rust/: Cargo.toml  Makefile
lib1/rust/lib1/: Cargo.toml
lib1/rust/lib1-py/: Cargo.toml
lib1/rust/lib1-py/src/: lib.rs
lib1/rust/lib1/src/: lib.rs
lib1/rust/pyo3-dylib/: Cargo.toml
lib1/rust/pyo3-dylib/src/: lib.rs
lib1/src/: lib.rs
lib2/: .bumpversion.cfg  Cargo.toml  LICENSE  Makefile  lib1  pyproject.toml
lib2-py/: Cargo.toml  lib1  pyproject.toml
lib2-py/lib2/: __init__.py
lib2-py/src/: lib.rs
lib2-rs/: Cargo.toml
lib2/.cargo/: config.toml
lib2/lib2/: __init__.py
lib2/rust/: Cargo.toml  Makefile
lib2/rust/lib2/: Cargo.toml
lib2/rust/lib2-py/: Cargo.toml  Makefile
lib2/rust/lib2-py/src/: lib.rs
lib2/rust/lib2/src/: lib.rs
lib2/src/: lib.rs
util/: Cargo.toml
util/src/: lib.rs
