[package]
name = "lib1_py_binding"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "lib1"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
lib1 = { path = "./rust/lib1", version = "*" }
lib1_py = { path = "./rust/lib1-py", version = "*" }
pyo3 = { version = "0.19", features = ["abi3-py37", "multiple-pymethods"] }

[profile.release]
debug = true
lto = false
panic = 'abort'
rpath = true

[profile.dev]
debug = true
lto = false
rpath = true
