[package]
name = "lib2_py"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
lib1 = { path = "../lib1-rs", version = "*" }
lib1_py = { path = "../lib1-py", version = "*" }
lib2 = { path = "../lib2-rs", version = "*" }
util = { path = "../util", version = "*" }
pyo3.workspace = true
strum.workspace = true

[profile.release]
debug = true
lto = false
panic = 'abort'
rpath = true

[profile.dev]
debug = true
lto = false
rpath = true
