[package]
name = "lib2"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "lib2"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
lib1 = { path = "../lib1-rs", version = "*" }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true

[profile.release]
debug = true
lto = false
panic = 'abort'
rpath = true

[profile.dev]
debug = true
lto = false
rpath = true
