[package]
name = "lib2-py-binding"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "lib2_py_binding"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
lib2 = { path = "./rust/lib2", version = "*" }
lib2_py = { path = "./rust/lib2-py", version = "*" }
lib1 = { path = "../lib1/rust/lib1", version = "*" }
lib1_py = { path = "../lib1/rust/lib1-py", version = "*" }
pyo3 = { version = "0.19.2", features = ["abi3-py37", "extension-module", "multiple-pymethods"] }

[profile.release]
debug = true
lto = false
panic = 'abort'
rpath = true

[profile.dev]
debug = true
lto = false
rpath = true
