[workspace]
members = [
  "lib2",
  "lib2-py",
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
lib1 = {version ="*", path="../../lib1/rust/lib1"}
lib1_py = {version ="*", path="../../lib1/rust/lib1-py"}
num = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
strum = "0.24.1"
strum_macros = "0.24.3"
