[package]
name = "lib2"
version = "0.1.0"
authors = ["timkpaine <t.paine154@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = ""
description = ""

[lib]
name = "lib2"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
chrono.workspace = true
lib1.workspace = true
num.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true

[profile.release]
debug = true
lto = false
panic = 'abort'
rpath = true

[profile.dev]
debug = true
lto = false
rpath = true
